@@ -19,7 +19,7 @@
 <tr class="odd">
 <td>Open Layers View</td>
 <td>Ctrl + Shift + L</td>
-<td>Experimental -&gt; Views -&gt; Layers View</td>
+<td>Views -&gt; Layers View</td>
 <td><div style="text-align: center">
 <img src="../constellation/CoreLayersView/src/au/gov/asd/tac/constellation/views/layers/docs/resources/layers-view.png" width="16" height="16" />
 </div></td>
